Recompute Backdrop-Filters Enabled State Whenever UseWebRender is Modified
Categories
(Core :: Graphics: WebRender, defect, P3)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox78 | --- | fixed |
People
(Reporter: nordzilla, Assigned: nordzilla)
References
Details
Attachments
(1 file)
[1635584] added logic to recompute backdrop-filter's enabled state in some places where UseWebRender is set.
This is not good for several reasons:
-
These functions are tightly coupled together and should really exist within the same function call.
-
It would be easy to accidentally miss a place where one is called, but not the other.
-
Anyone adding a new call to
SetUseWebRender()would have to magically know to recompute backdrop-filter's state. -
Adding a call to
RecomputeBackdropFilterEnabledState()after every use ofSetUseWebRender()would be wasteful, because we really only want to recompute if the value changed.
Having this functionality separated just feels like a defect waiting to happen (if you don't already consider it a defect itself).
This patch modifies the macros that generate the gfxVars such that SetUseWebRender can have a custom setter that only recomputes backdrop-filter's state if its UseWebRender's value changes.
| Assignee | ||
Comment 1•5 years ago
|
||
- Modify the gfxVars generation macros to allow custom setters.
- Remove previous manual calls to recompute backdrop filter.
Updated•5 years ago
|
Comment 3•5 years ago
|
||
| bugherder | ||
Description
•