layout/style/nsCSSProps.h
@@ -24,6 +24,7 @@
 #include "mozilla/CSSPropFlags.h"
 #include "mozilla/EnumTypeTraits.h"
 #include "mozilla/Preferences.h"
+#include "mozilla/gfx/gfxVarReceiver.h"
 #include "nsXULAppAPI.h"
 
 // Length of the "--" prefix on custom names (such as custom property names,
@@ -137,6 +138,11 @@ class nsCSSProps {
    */
   static void RecomputeEnabledState(const char* aPrefName,
                                     void* aClosure = nullptr);
+
+  /**
+   * Retrieve a singleton receiver to register with gfxVars
+   */
+  static mozilla::gfx::gfxVarReceiver& GfxVarReceiver();
 
   static const nsCSSPropertyID* SubpropertyEntryFor(nsCSSPropertyID aProperty) {
     MOZ_ASSERT(eCSSProperty_COUNT_no_shorthands <= aProperty &&
